<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_from_other"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_bar_height"
    android:background="@color/c_main_white_bg"
    android:gravity="center_vertical">

    <RelativeLayout
        android:id="@+id/rl_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:paddingEnd="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="2dp"
            android:paddingStart="12dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_left"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_back"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/imv_back"
            android:layout_toRightOf="@id/imv_back"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/c_main_text"
            android:textSize="@dimen/top_back_size" />

    </RelativeLayout>

    <com.jointem.base.view.AlwaysMarqueeTextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="center"
        android:singleLine="true"
        android:maxEms="10"
        android:text="标题"
        android:textColor="@color/c_main_text"
        android:textSize="@dimen/top_title_size"
        android:textStyle="normal" />

    <RelativeLayout
        android:id="@+id/rl_operation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_operation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/c_main_text"
            android:textSize="@dimen/top_back_size"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>